--- a/Projekt/Makefile
+++ b/Projekt/Makefile
@@ -5,13 +5,23 @@ LDFLAGS := -s -lm
 
 .PHONY: all clean
 
-all: main.x
+all: main.x min.x
 
-main.x: main.o GameClass.o
+min.x: min.o
+
+main.x: main.o GameClass.o GameState.o State.o MainMenuState.o
+
+MainMenuState.o: MainMenuState.cc
+
+State.o: State.cc
+
+GameState.o: GameState.cc
 
 GameClass.o: GameClass.cc
 
 main.o: main.cc
+
+mic.o: min.cc
 
 %.x: %.o
 	$(CXX) $(LDFLAGS) $^ -o $@ $(SFMLLIB)
